--- a/DALT.vcxproj
+++ b/DALT.vcxproj
@@ -142,12 +142,14 @@
     <ClInclude Include="Account.h" />
     <ClInclude Include="AccountAccess.h" />
     <ClInclude Include="DatabaseAccess.h" />
+    <ClInclude Include="Function.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
     <ClCompile Include="AccountAccess.cpp" />
     <ClCompile Include="DatabaseAccess.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Function.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
