--- a/DALT.vcxproj
+++ b/DALT.vcxproj
@@ -142,14 +142,20 @@
     <ClInclude Include="Account.h" />
     <ClInclude Include="AccountAccess.h" />
     <ClInclude Include="DatabaseAccess.h" />
+    <ClInclude Include="Date.h" />
     <ClInclude Include="Function.h" />
+    <ClInclude Include="Movie.h" />
+    <ClInclude Include="MovieAccess.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
     <ClCompile Include="AccountAccess.cpp" />
     <ClCompile Include="DatabaseAccess.cpp" />
+    <ClCompile Include="Date.cpp" />
     <ClCompile Include="Function.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Movie.cpp" />
+    <ClCompile Include="MovieAccess.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
