--- a/DALT.vcxproj.filters
+++ b/DALT.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="ScheduleAccess.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Decoration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DatabaseAccess.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ScheduleAccess.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Decoration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
